图标再次修改

--- a/templates/base.html
+++ b/templates/base.html
@@ -105,15 +105,11 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text ">@</h5>
-                    <ul>
-                        <li>
-                            <a href="https://www.instagram.com/starmountain1997/"><img
-                                    src="{% static "images/Instagram.png" %}" width="20%"></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/gzr2017"><img src="{% static "images/GitHub.png" %}"
-                                    width="20%"></a>
-                        </li>
+
+                    <a href="https://www.instagram.com/starmountain1997/"><img src="{% static "images/Instagram.png" %}"
+                            width="20%"></a>
+                    <a href="https://github.com/gzr2017"><img src="{% static "images/GitHub.png" %}" width="20%"></a>
+
                     </ul>
                 </div>
             </div>
