图标再次修改

--- a/templates/base.html
+++ b/templates/base.html
@@ -105,11 +105,15 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text ">@</h5>
-
-                    <a href="https://www.instagram.com/starmountain1997/"><img src="{% static "images/Instagram.png" %}"
-                            width="20%"></a>
-                    <a href="https://github.com/gzr2017"><img src="{% static "images/GitHub.png" %}" width="20%"></a>
-
+                    <ul>
+                        <li>
+                            <a href="https://www.instagram.com/starmountain1997/"><img
+                                    src="{% static "images/Instagram.png" %}" width="50%"></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/gzr2017"><img src="{% static "images/GitHub.png" %}"
+                                    width="50%"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
