--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -40,6 +40,23 @@
         <iframe src="{{ article.body.url }}" frameborder="0" scrolling="no" id="external-frame"
             onload="setIframeHeight(this)" width="100% "></iframe>
     </div>
+    <div class="card">
+        <div id="gitalk-container"></div>
+        <script>
+            var gitalk = new Gitalk({
+                clientID: 'ac4a0902504c253cc5d5',
+                clientSecret: '68e68aa6d3629005b84292436dbb6644dd9a5db5',
+                repo: 'starmountain',
+                owner: 'gzr2017',
+                admin: ['gzr2017'],
+                id: location.pathname,      // Ensure uniqueness and length less than 50
+                distractionFreeMode: false  // Facebook-like distraction free mode
+            })
+
+            gitalk.render('gitalk-container')
+        </script>
+    </div>
+
 </div>
 <script>
     $(document).ready(function () {
