--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -46,7 +46,7 @@
             var gitalk = new Gitalk({
                 clientID: 'ac4a0902504c253cc5d5',
                 clientSecret: '68e68aa6d3629005b84292436dbb6644dd9a5db5',
-                repo: 'starmountain',
+                repo: 'gzr2017.github.io',
                 owner: 'gzr2017',
                 admin: ['gzr2017'],
                 id: location.pathname,      // Ensure uniqueness and length less than 50
