评论样式调整

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -42,7 +42,9 @@
     </div>
 </div>
 <div class="card">
-    <div id="gitalk-container"></div>
+    <div class="card-content">
+        <div id="gitalk-container"></div>
+    </div>
     <script>
         var gitalk = new Gitalk({
             clientID: 'ac4a0902504c253cc5d5',
