--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>starmountain</title>
-    <link rel="icon" href="http://ww2.sinaimg.cn/large/bb11ad77gw1ecz431hqgyj20af0dw74p.jpg" type="image/x-icon">
+    <link rel="icon" href="{% static "images/logo.png" %}" type="image/x-icon">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
