--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,11 @@
                         <a>
                             <span class="card-title" style="font-weight:bold">友链 Links</span>
                         </a>
-
+                        <a href="https://ruojunbai.com/">
+                            <div class="chip light-green white-text">
+                                Ruojun Bai
+                            </div>
+                        </a>
 
                     </div>
                 </div>
