--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>starmountain</title>
+    <title>星山的部屋</title>
     <link rel="icon" href="{% static "images/logo.png" %}" type="image/x-icon">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
