--- a/templates/base.html
+++ b/templates/base.html
@@ -22,18 +22,16 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper  light-green lighten-1">
-                <div class="col s6 l12">
-                    <a href="{% url 'index' %}" class="brand-logo" style="font-weight:bold;">starmountain</a>
-                </div>
-                <div class="col s6 l12">
-                    <form method='get' action="/search/" target="_blank" class="right">
-                        <div class="input-field">
-                            <input id="search" type="search" type="text" name="q" required>
-                            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                            <i class="material-icons">close</i>
-                        </div>
-                    </form>
-                </div>
+                <a href="{% url 'index' %}" class="brand-logo center" style="font-weight:bold;">starmountain</a>
+            </div>
+            <div class="nav-content  light-green lighten-1">
+                <form method='get' action="/search/" target="_blank" class="right">
+                    <div class="input-field">
+                        <input id="search" type="search" type="text" name="q" required>
+                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                        <i class="material-icons">close</i>
+                    </div>
+                </form>
             </div>
         </nav>
     </div>
