导航栏修改

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
 <body class=" light-green lighten-1">
     <div class="navbar-fixed">
-        <nav>
+        <nav class="nav-extended">
             <div class="nav-wrapper  light-green lighten-1">
                 <a href="{% url 'index' %}" class="brand-logo center" style="font-weight:bold;">starmountain</a>
             </div>
