导航栏更改

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,12 +20,12 @@
 
 <body class=" light-green lighten-1">
     <div class="navbar-fixed">
-        <nav class="nav-extended">
-            <div class="nav-wrapper  light-green lighten-1">
+        <nav class="nav-extended  light-green lighten-1">
+            <div class="nav-wrapper">
                 <a href="{% url 'index' %}" class="brand-logo center" style="font-weight:bold;">starmountain</a>
             </div>
-            <div class="nav-content  light-green lighten-1">
-                <form method='get' action="/search/" target="_blank" class="right">
+            <div class="nav-content">
+                <form method='get' action="/search/" target="_blank">
                     <div class="input-field">
                         <input id="search" type="search" type="text" name="q" required>
                         <label class="label-icon" for="search"><i class="material-icons">search</i></label>
