导航栏更改

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,22 +19,20 @@
 </head>
 
 <body class=" light-green lighten-1">
-    <div class="navbar-fixed">
-        <nav class="nav-extended  light-green lighten-1">
-            <div class="nav-wrapper">
-                <a href="{% url 'index' %}" class="brand-logo center" style="font-weight:bold;">starmountain</a>
-            </div>
-            <div class="nav-content">
-                <form method='get' action="/search/" target="_blank">
-                    <div class="input-field">
-                        <input id="search" type="search" type="text" name="q" required>
-                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                        <i class="material-icons">close</i>
-                    </div>
-                </form>
-            </div>
-        </nav>
-    </div>
+    <nav class="nav-extended">
+        <div class="nav-wrapper">
+            <a href="{% url 'index' %}" class="brand-logo center" style="font-weight:bold;">starmountain</a>
+        </div>
+        <div class="nav-content">
+            <form method='get' action="/search/" target="_blank">
+                <div class="input-field">
+                    <input id="search" type="search" type="text" name="q" required>
+                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                    <i class="material-icons">close</i>
+                </div>
+            </form>
+        </div>
+    </nav>
     {% block nav %}{% endblock %}
     <main>
         <div class="row">
