--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,8 @@
     <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 </head>
 
-<body class=" light-green lighten-1">
-    <nav class="nav-extended">
+<body class="light-green lighten-1">
+    <nav class="nav-extended light-green lighten-1">
         <div class="nav-wrapper">
             <a href="{% url 'index' %}" class="brand-logo center" style="font-weight:bold;">starmountain</a>
         </div>
