搜索栏样式更改

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,13 +36,15 @@
                         <a href="{% url 'index' %}">
                             <span class="card-title" style="font-weight:bold">标签 Tags</span>
                         </a>
-                        <form method='get' action="/search/" target="_blank">
-                            <div class="input-field">
-                                <input id="search" type="search" type="text" name="q" required>
-                                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                                <i class="material-icons">close</i>
-                            </div>
-                        </form>
+                        <div class="nav-wrapper">
+                            <form method='get' action="/search/" target="_blank">
+                                <div class="input-field">
+                                    <input id="search" type="search" type="text" name="q" required>
+                                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                                    <i class="material-icons">close</i>
+                                </div>
+                            </form>
+                        </div>
                         {% for tag in tag_list %}
                         <a href="{% url 'article_tag' tag_name=tag %}">
                             <div class="chip light-green white-text">
