--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                 <div class="card ">
                     <div class="card-content">
                         <a href="{% url 'index' %}">
-                            <span class="card-title" style="font-weight:bold">标签 Tags</span>
+                            <span class="card-title" style="font-weight:bold">检索 Index</span>
                         </a>
                         <div class="nav-wrapper">
                             <form method='get' action="/search/" target="_blank">
