--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
     <link href='https://cdn.webfont.youziku.com/webfonts/nomal/105175/28678/5ca9cf0ff629d80490e62d93.css'
         rel='stylesheet' type='text/css' />
+    <link href='https://cdn.webfont.youziku.com/webfonts/nomal/105175/46635/5cb6b279f629d8008495dd9d.css'
+        rel='stylesheet' type='text/css' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -25,7 +27,7 @@
         <nav class="light-green lighten-1">
             <div class="nav-wrapper">
                 <a href="{% url 'index' %}" class="brand-logo center"
-                    style="font-family:'AbductionII';">starmountain</a>
+                    style="font-family:'YuLong18ced272cc19ad7';">星山</a>
             </div>
         </nav>
     </div>
