--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
     <link href='https://cdn.webfont.youziku.com/webfonts/nomal/105175/28678/5ca9cf0ff629d80490e62d93.css'
         rel='stylesheet' type='text/css' />
-    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/105175/46635/5cb6b2e9f629d8008495dd9e.css'
+    <link href='https://cdn.webfont.youziku.com/webfonts/nomal/105175/46635/5cb6b2e9f629d8008495dd9e.css'
         rel='stylesheet' type='text/css' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
