--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,11 @@
                                 Ruojun Bai
                             </div>
                         </a>
-
+                        <a href="{% url 'asswetran' %}">
+                            <div class="chip light-green white-text">
+                                AssWeTran
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
