--- a/templates/base.html
+++ b/templates/base.html
@@ -95,11 +95,17 @@
                                 Ruojun Bai
                             </div>
                         </a>
+                        <a href="http://blog.cugxuan.cn/">
+                            <div class="chip light-green white-text">
+                                泫
+                            </div>
+                        </a>
                         <a href="{% url 'asswetran' %}">
                             <div class="chip light-green white-text">
                                 AssWeTran
                             </div>
                         </a>
+
                     </div>
                 </div>
             </div>
