--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -35,6 +35,10 @@
             };
             window.onload = function () {
                 setIframeHeight(document.getElementById('external-frame'));
+                var links = document.getElementsByTagName('external-frame');
+                for (var i = 0; i < links.length; i++) {
+                    links[i].setAttribute('target', '_top');
+                }
             };
         </script>
         <iframe src="{{ article.body.url }}" frameborder="0" scrolling="no" id="external-frame"
