--- a/templates/base.html
+++ b/templates/base.html
@@ -98,6 +98,11 @@
                                 泫
                             </div>
                         </a>
+                        <a href="https://www.ichen.pw/">
+                            <div class="chip light-green white-text">
+                                ichen
+                            </div>
+                        </a>
                         <a href="{% url 'asswetran' %}">
                             <div class="chip light-green white-text">
                                 AssWeTran
