--- a/templates/AssWeTran.html
+++ b/templates/AssWeTran.html
@@ -2,8 +2,8 @@
 <nav>
     <div class="nav-wrapper light-green">
         <div class="col s12">
-            <a target="_blank" href="{% url 'index' %}" class="breadcrumb">首页</a>
-            <a target="_blank" href="#!" class="breadcrumb">Ass We Tran</a>
+            <a href="{% url 'index' %}" class="breadcrumb">首页</a>
+            <a href="#!" class="breadcrumb">Ass We Tran</a>
         </div>
     </div>
 </nav>
