增加对输出图的优化

--- a/templates/message.html
+++ b/templates/message.html
@@ -2,8 +2,8 @@
 <nav>
     <div class="nav-wrapper light-green">
         <div class="col s12">
-            <a target="_blank" href="{% url 'index' %}" class="breadcrumb">首页 Home</a>
-            <a target="_blank" href="#!" class="breadcrumb">消息 Message</a>
+            <a href="{% url 'index' %}" class="breadcrumb">首页 Home</a>
+            <a href="#!" class="breadcrumb">消息 Message</a>
         </div>
     </div>
 </nav>
